[package]
name = "btc-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# BDK Bitcoin Development Kit
rand = { version = "0.6.5" }
rand_core = { version = "0.6.3", features = ["std"] }
bdk = { version = "0.18.0", default-features = false, features = ["all-keys","electrum","key-value-db"]}
bdk-macros = "0.6"

# CLI Argument Parsing
clap = { version = "3.0.5", features = ["derive"] }
# CLI Output Tables
cli-table = "0.4"
string-error = "0.1.0"
rpassword = "5.0.1"

# Configuration reading and parsing
config = { version = "0.11", features = ["yaml"] }
serde_derive = "^1.0.8"
serde = "^1.0.8"
serde_yaml = "0.8.23"
home = "0.5.3"

# Encrypted wallet data file cryptographic libraries.
pbkdf2 = "0.10.0"
aes-gcm = "0.9.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"



